--- a/joseph.css
+++ b/joseph.css
@@ -12,3 +12,29 @@ body {
     text-align: center;
     font-size: 30px;
 }
+html {
+  scroll-behavior: smooth;
+}
+.nav{
+    border:1px solid #ccc;
+    border-width:1px 0;
+    list-style:none;
+    margin:0;
+    padding:0;
+    text-align:center;
+}
+.nav li{
+    display:inline;
+}
+.nav a{
+    display:inline-block;
+    padding:10px;
+    font-size: 20px;
+    color: dimgrey;
+    text-decoration: none;
+}
+.topbar {
+    position: fixed;
+  top: 0;
+  width: 100%;
+}
