--- a/joseph.css
+++ b/joseph.css
@@ -27,7 +27,7 @@ html {
     display:inline;
 }
 .nav a{
-    display:inline-block;
+    %display:inline-block;
     padding:10px;
     font-size: 20px;
     color: dimgrey;
@@ -37,4 +37,7 @@ html {
     position: fixed;
   top: 0;
   width: 100%;
+}
+a {
+    
 }
