--- a/joseph.css
+++ b/joseph.css
@@ -16,22 +16,24 @@ html {
   scroll-behavior: smooth;
 }
 .nav{
-    border:1px solid #ccc;
-    border-width:1px 0;
-    list-style:none;
-    margin:0;
-    padding:0;
-    text-align:center;
+    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 .nav li{
-    display:inline;
+    float: left;
 }
 .nav a{
-    %display:inline-block;
-    padding:10px;
-    font-size: 20px;
-    color: dimgrey;
-    text-decoration: none;
+    display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+li a:hover {
+  background-color: #111;
 }
 .topbar {
     position: fixed;
