--- a/joseph.css
+++ b/joseph.css
@@ -19,16 +19,17 @@ html {
     border:1px solid #ccc;
     border-width:1px 0;
     list-style:none;
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding:5px;
     text-align:center;
+    background-color: beige;
 }
 .nav li{
     display:inline;
 }
 .nav a{
     %display:inline-block;
-    padding:10px;
+    padding:20px;
     font-size: 20px;
     color: dimgrey;
     text-decoration: none;
@@ -37,7 +38,23 @@ html {
     position: fixed;
   top: 0;
   width: 100%;
+    background-color: antiquewhite
 }
-a {
-    
+.linkedin {
+    text-align: center;
+    font-size: 16px;
+    padding: 5px;
+}
+.email {
+    text-align: center;
+    font-size: 16px;
+    padding: 5px 0 0 0;
+    margin: 0;
+}
+h3 {
+    margin: 0;
+    margin-top: 5px;
+}
+.maincontent {
+    margin-top: 220px;
 }
