--- a/joseph.css
+++ b/joseph.css
@@ -22,7 +22,7 @@ html {
     margin: 0;
     padding:5px;
     text-align:center;
-    background-color: beige;
+    
 }
 .nav li{
     display:inline;
@@ -38,7 +38,8 @@ html {
     position: fixed;
   top: 0;
   width: 100%;
-    background-color: antiquewhite
+    %background-image:url(Headshot.JPG);
+    %background-size: 300%;
 }
 .linkedin {
     text-align: center;
@@ -62,4 +63,11 @@ h3 {
 #headshot {
     float: right;
     width: 50%;
+}
+h4 {
+    font-size: 25px;
+    margin-bottom: 5px;
+}
+p {
+    margin: 0px;
 }
