--- a/joseph.css
+++ b/joseph.css
@@ -62,11 +62,12 @@ h3 {
 }
 #headshot {
     float: right;
-    width: 50%;
+    width: 30%;
 }
 h4 {
     font-size: 25px;
     margin-bottom: 5px;
+    margin-top: 0;
 }
 p {
     margin: 0px;
