--- a/joseph.css
+++ b/joseph.css
@@ -35,11 +35,12 @@ html {
     text-decoration: none;
 }
 .topbar {
-    position: fixed;
-  top: 0;
+    %position: fixed;
+  %top: 0;
   width: 100%;
     %background-image:url(Headshot.JPG);
     %background-size: 300%;
+    background-color: whitesmoke
 }
 .linkedin {
     text-align: center;
@@ -57,7 +58,7 @@ h3 {
     margin-top: 5px;
 }
 .maincontent {
-    margin-top: 220px;
+    margin-top: 10px;
     font-size: 20px;
 }
 #headshot {
@@ -67,7 +68,17 @@ h3 {
 h4 {
     font-size: 25px;
     margin-bottom: 5px;
+    margin-top: 0;
 }
 p {
     margin: 0px;
+}
+#bio {
+    display: inline-block;
+}
+
+#resume {
+    float: right;
+    height: 800px;
+    width: 400px;
 }
