--- a/joseph.css
+++ b/joseph.css
@@ -1,27 +1,115 @@
 .name {
     padding: 10px;
-    font-family: "Arial Black", Gadget, sans-serif;
     font-size: 50px;
-    text-align: left;
-    color: rgb(230,230,230);
-    width: auto;
-    margin-right: 50%;
+    background-color: rgba(0,0,0,1);
+    opacity: 1;
+    border-radius: 20px;
 }
 .container {
-    margin: 0;
-    padding: 10px;
      background-image: url(Mirror.jpg);
-    background-position: center center;
+    background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment:scroll;
     background-size: cover;
-    height: 800px;
+    max-height: 100%;
+    height: 500px;
+    opacity: .7;
     
 }
 body {
     margin: 0;
+    height: 100%;
+    font-family: "Arial Black", Gadget, sans-serif;
+    color: white;
 }
 .top {
-    background-color: rgba(60,60,60,1);
-    margin: 10px;
+    position: absolute;
+    top: 5%;
+    left: 1%;
+    width: 100%;
+    text-align: left;
+    opacity: .8;
+}
+.topright {
+    position: absolute;
+    top: 5%;
+    right: 1%;
+    opacity: .8;
+}
+.link{
+    scroll-behavior: smooth;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    background-color: black;
+    text-align: center;
+    padding: 0;
+    border-radius: 10px;
+}
+.links li {
+    padding: 10px;
+    display: inline;
+    color: white;
+    text-align: center;
+    font-size: 30px;
+}
+.About {
+    width: 100%;
+    color: black;
+    opacity: .8;
+    height: 600px;
+    padding-left: 1%;
+    padding-right: 1%;
+    font-size: 20px;
+}
+#About {
+    width: 100%;
+    font-size: 50px;
+    text-align: center;
+    align-content: center;
+}
+li a {
+    color: white;
+    text-decoration: none;
+}
+a:hover {
+    color: burlywood;
+}
+.bio{
+    text-align: left;
+}
+#headshot {
+    min-width: 30%;
+    max-width: 40%;
+    float: right;
+    margin-right: 2%;
+    border-radius: 20px;
+}
+.Skills {
+    width: 100%;
+    color: black;
+    opacity: .8;
+    height: 1200px;
+    padding-left: 1%;
+    padding-right: 1%;
+    font-size: 20px;
+}
+#pdf {
+    float: right;
+    width: 850px;
+    height: 1000px;
+}
+html {
+    scroll-behavior: smooth;
+}
+address {
+    color: black;
+    font-size: 15px;
+    text-decoration: none;
+    opacity: 1;
+    font-family: "Times New Roman", Times, serif;
+}
+#email {
+    color: blue;
 }
