--- a/joseph.css
+++ b/joseph.css
@@ -59,7 +59,7 @@ ul {
     opacity: .9;
     height: 600px;
     padding-left: 1%;
-    font-size: 20px;
+    font-size: 30px;
 }
 #About {
     font-size: 50px;
@@ -91,7 +91,7 @@ a:hover {
     height: 1300px;
     overflow: auto;
     padding-left: 1%;
-    font-size: 20px;
+    font-size: 30px;
 }
 h2 {
     margin: 0;
@@ -116,4 +116,18 @@ address {
 }
 #email {
     color: blue;
+}
+.Contact {
+    width: 99%;
+    color: black;
+    opacity: .9;
+    height: 1300px;
+    overflow: auto;
+    padding-left: 1%;
+    font-size: 20px;
+}
+#Contact {
+    font-size: 50px;
+    text-align: center;
+    align-content: center;
 }
