--- a/joseph.css
+++ b/joseph.css
@@ -97,6 +97,7 @@ h2 {
     margin: 0;
     padding: 0;
     font-size: 50px;
+    text-decoration: underline;
 }
 #pdf {
     float: right;
@@ -121,13 +122,22 @@ address {
     width: 99%;
     color: black;
     opacity: .9;
-    height: 1300px;
+    height: 300px;
     overflow: auto;
     padding-left: 1%;
-    font-size: 20px;
+    font-size: 30px;
 }
 #Contact {
     font-size: 50px;
     text-align: center;
     align-content: center;
+}
+.Contact ul{
+    background-color: white;
+}
+.Contact li a{
+    color: blue;
+}
+.Contact li a:hover{
+    color: black;
 }
