--- a/joseph.css
+++ b/joseph.css
@@ -95,6 +95,7 @@ a:hover {
 }
 h2 {
     margin: 0;
+    margin-bottom: 20px;
     padding: 0;
     font-size: 50px;
     text-decoration: underline;
