--- a/joseph.css
+++ b/joseph.css
@@ -1,9 +1,9 @@
 .name {
     padding: 10px;
-    font-size: 50px;
+    font-size: 5vw;
     background-color: rgba(0,0,0,1);
     opacity: 1;
-    border-radius: 20px;
+    border-radius: 2vw;
 }
 .container {
      background-image: url(Mirror.jpg);
@@ -12,7 +12,7 @@
     background-attachment:scroll;
     background-size: cover;
     max-height: 100%;
-    height: 500px;
+    height: 30vw;
     opacity: .7;
     
 }
@@ -33,7 +33,7 @@ body {
     position: absolute;
     top: 5%;
     right: 1%;
-    opacity: .8;
+    opacity: .9;
 }
 .link{
     scroll-behavior: smooth;
@@ -44,25 +44,25 @@ ul {
     background-color: black;
     text-align: center;
     padding: 0;
-    border-radius: 10px;
+    border-radius: 1vw;
 }
 .links li {
-    padding: 10px;
+    padding: 1vw;
     display: inline;
     color: white;
     text-align: center;
-    font-size: 30px;
+    font-size: 3.5vw;
 }
 .About {
 
     color: black;
     opacity: .9;
-    height: 600px;
+    height: 60vw;
     padding-left: 1%;
-    font-size: 30px;
+    font-size: 3vw;
 }
 #About {
-    font-size: 50px;
+    font-size: 5vw;
     text-align: center;
     align-content: center;
 }
@@ -81,30 +81,29 @@ a:hover {
     max-width: 40%;
     float: right;
     margin-right: 1%;
-    border-radius: 20px;
-    border: 5px black;
+    border-radius: 2vw;
 }
 .Skills {
     width: 99%;
     color: black;
     opacity: .9;
-    height: 1300px;
+    height: 150vw;
     overflow: auto;
     padding-left: 1%;
-    font-size: 30px;
+    font-size: 3vw;
 }
 h2 {
     margin: 0;
-    margin-bottom: 20px;
+    margin-bottom: 2vw;
     padding: 0;
-    font-size: 50px;
+    font-size: 5vw;
     text-decoration: underline;
 }
 #pdf {
     float: right;
     margin-right: 1%;
-    width: 850px;
-    height: 1150px;
+    width: 85vw;
+    height: 115vw;
 }
 html {
     scroll-behavior: smooth;
@@ -123,10 +122,10 @@ address {
     width: 99%;
     color: black;
     opacity: .9;
-    height: 300px;
+    height: 30vw;
     overflow: auto;
     padding-left: 1%;
-    font-size: 30px;
+    font-size: 3vw;
 }
 #Contact {
     font-size: 50px;
