--- a/joseph.css
+++ b/joseph.css
@@ -1,28 +1,31 @@
 .name {
     padding: 1px;
     font-size: 3.5vw;
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
     opacity: 1;
     border-radius: 2vw;
     text-shadow: .25vw .25vw black;
 }
+
 .container {
-     background-image: url(Mirror.jpg);
+    background-image: url(Mirror.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-attachment:scroll;
+    background-attachment: scroll;
     background-size: cover;
     max-height: 100%;
     height: 30vw;
     opacity: .7;
-    
+
 }
+
 body {
     margin: 0;
     height: 100%;
     font-family: "Arial Black", Gadget, sans-serif;
     color: white;
 }
+
 .top {
     position: absolute;
     top: 1%;
@@ -30,6 +33,7 @@ body {
     text-align: left;
     opacity: 1;
 }
+
 .topright {
     position: absolute;
     top: 2%;
@@ -37,9 +41,11 @@ body {
     opacity: .9;
     height: 3vw;
 }
-.link{
+
+.link {
     scroll-behavior: smooth;
 }
+
 .topright ul {
     list-style-type: none;
     margin: 0;
@@ -49,6 +55,7 @@ body {
     border-radius: 1vw;
     text-shadow: .15vw .15vw black;
 }
+
 .links li {
     padding: 1vw;
     display: inline;
@@ -56,6 +63,7 @@ body {
     text-align: center;
     font-size: 2vw;
 }
+
 .About {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
@@ -66,22 +74,27 @@ body {
     padding-left: 1%;
     font-size: 1.5vw;
 }
+
 #About {
     font-size: 1vw;
     text-align: center;
     align-content: center;
 }
+
 .topright li a {
     color: white;
     text-decoration: none;
 }
+
 .topright a:hover {
     color: burlywood;
     text-shadow: .2vw .2vw black;
 }
-.bio{
+
+.bio {
     text-align: left;
 }
+
 #headshot {
     min-width: 30%;
     max-width: 40%;
@@ -90,6 +103,7 @@ body {
     border-radius: 2vw;
     filter: grayscale(.3);
 }
+
 .Skills {
     width: 99%;
     color: black;
@@ -100,6 +114,7 @@ body {
     font-size: 1.5vw;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 h2 {
     margin: 0;
     margin-bottom: 1vw;
@@ -107,15 +122,18 @@ h2 {
     font-size: 3vw;
     text-decoration: underline;
 }
+
 #pdf {
     float: right;
     margin: 1%;
     width: 42.5vw;
     height: 57.5vw;
 }
+
 html {
     scroll-behavior: smooth;
 }
+
 address {
     color: black;
     font-size: .75vw;
@@ -125,9 +143,11 @@ address {
     margin-left: 1%;
     margin-bottom: 1%;
 }
+
 #email {
     color: blue;
 }
+
 .Contact {
     width: 99%;
     color: black;
@@ -138,12 +158,14 @@ address {
     font-size: 1.75vw;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 #Contact {
-    
+
     text-align: center;
     align-content: center;
 }
-.Contact ul{
+
+.Contact ul {
     list-style-type: none;
     margin: 0;
     %background-color: black;
@@ -152,16 +174,20 @@ address {
     border-radius: 1vw;
     background-color: white;
 }
-.Contact li a{
+
+.Contact li a {
     color: blue;
-    
+
 }
+
 .Contact li {
     height: 3vw;
 }
-.Contact li a:hover{
+
+.Contact li a:hover {
     color: black;
 }
+
 p {
     text-indent: 3vw;
     margin: .75vw;
